# bluetex

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
blacktex/: main.py
bluetex/: __about__.py  __init__.py  legacy_cli.py  main.py
bluetex/cli/: __init__.py  main.py
src/blacktex/: main.py
test/: test_blacktex.py
tests/: test_bluetex.py  test_cli.py  test_legacy_cli.py
