[build-system]
requires = ["uv_build>=0.11.19,<0.12"]
build-backend = "uv_build"

[project]
name = "bluetex"
authors = [{name = "David Völgyes", email = "david.volgyes@ieee.org"}]
maintainers = [{name = "David Völgyes", email = "david.volgyes@ieee.org"}]
description = "Clean up your LaTeX files (fork of blacktex)"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Text Editors :: Text Processing",
  "Topic :: Text Processing",
  "Topic :: Text Processing :: Markup",
  "Topic :: Text Processing :: Markup :: LaTeX",
  "Topic :: Utilities",
]
keywords = ["latex", "linting"]
version = "0.6.1"
requires-python = ">=3.12"
dependencies = ["pylatexenc", "click", "loguru"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "coverage", "pytest-xdist", "pre-commit"]

[project.urls]
Code = "https://github.com/dvolgyes/bluetex"
Issues = "https://github.com/dvolgyes/bluetex/issues"
Funding = "https://github.com/sponsors/dvolgyes"

[project.scripts]
bluetex = "bluetex.cli.main:main"

[tool.uv.build-backend]
module-root = ""

[tool.coverage.run]
branch = true
source = ["bluetex"]

[tool.coverage.report]
show_missing = true

[tool.coverage.xml]
output = "coverage.xml"

[tool.isort]
profile = "black"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "coverage>=7.9.2",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "mypy>=1.16.1",
    "pre-commit>=4.5.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.8.0",
]
