[build-system]
requires = ["uv_build>=0.11.19,<0.12"]
build-backend = "uv_build"

[project]
name = "bluetex"
authors = [{name = "David Völgyes", email = "david.volgyes@ieee.org"}]
maintainers = [{name = "David Völgyes", email = "david.volgyes@ieee.org"}]
description = "Clean up your LaTeX files (fork of blacktex)"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Text Editors :: Text Processing",
  "Topic :: Text Processing",
  "Topic :: Text Processing :: Markup",
  "Topic :: Text Processing :: Markup :: LaTeX",
  "Topic :: Utilities",
]
keywords = ["latex", "linting"]
version = "0.6.2"
requires-python = ">=3.12"
dependencies = ["pylatexenc~=2.10", "click~=8.2", "loguru~=0.7.3"]

[project.urls]
Code = "https://github.com/dvolgyes/bluetex"
Issues = "https://github.com/dvolgyes/bluetex/issues"
Funding = "https://github.com/sponsors/dvolgyes"

[project.scripts]
bluetex = "bluetex.cli.main:main"

[tool.uv.build-backend]
module-root = ""

[tool.coverage.run]
branch = true
source = ["bluetex"]

[tool.coverage.report]
show_missing = true

[tool.coverage.xml]
output = "coverage.xml"

[dependency-groups]
dev = [
    "coverage~=7.9",
    "flake8~=7.3",
    "pre-commit~=4.6",
    "pytest~=9.0",
    "pytest-cov~=7.1",
    "pytest-xdist~=3.8",
]
